fix horizontal overflow fix mobile sizing/breaks added med images/folders added filenames at top of code files for ease of ID change up the 'contacts' section a bit TODO: add real usernames/links for jessie in contacts section

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+/* // index.css */
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -165,3 +167,9 @@ body {
 .card-3d-back {
   transform: rotateY(180deg);
 }
+
+/* Always do this */
+*, *::before, *::after { box-sizing: border-box; }
+
+/* Prevent accidental sideways page scroll */
+html, body { overflow-x: hidden; }
